--- a/HuntMap.Web/App.razor
+++ b/HuntMap.Web/App.razor
@@ -1,2 +1,10 @@
-<AppRouteView RouteData="@RouteData" DefaultLayout="@typeof(MainLayout)" />
-<FocusOnNavigate RouteData="@RouteData" Selector="h1" />
+<Router AppAssembly="@typeof(App).Assembly">
+    <Found Context="routeData">
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+    </Found>
+    <NotFound>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <h1>Not found</h1>
+        </LayoutView>
+    </NotFound>
+</Router>
